--- a/20-interrupts-timer/Makefile
+++ b/20-interrupts-timer/Makefile
@@ -1,10 +1,10 @@
 # $@ = target file
 # $< = first dependency
 # $^ = all dependencies
-ifeq (0, 1)
+ifeq (0, 0)
 C_SOURCES = $(wildcard kernel/*.c drivers/*.c cpu/*.c libc/*.c)
 HEADERS = $(wildcard kernel/*.h drivers/*.h cpu/*.h libc/*.h)
-
+INC = kernel drivers cpu libc mm
 # Nice syntax for file extension replacement
 OBJS = ${C_SOURCES:.c=.o cpu/interrupt.o}
 
@@ -56,6 +56,7 @@ else
 
 C_SOURCES = $(wildcard kernel/*.c drivers/*.c cpu/*.c)
 HEADERS = $(wildcard kernel/*.h drivers/*.h cpu/*.h)
+INC = kernel drivers cpu libc mm
 # Nice syntax for file extension replacement
 OBJS = ${C_SOURCES:.c=.o cpu/interrupt.o}
 
