copy on write working

--- a/30-mprocess/apps/Makefile
+++ b/30-mprocess/apps/Makefile
@@ -13,6 +13,7 @@ INC = common
 OBJS = ${C_SOURCES:.c=.o common/entry.o}
 
 all: shell
+	./writedisk.sh
 
 shell: shell.elf 
 	objcopy -O binary shell.elf shell
